Add #supporto anchor for direct donation link

--- a/styles.css
+++ b/styles.css
@@ -691,6 +691,7 @@ body {
 .story-support-inline {
     margin: 32px 0;
     text-align: center;
+    scroll-margin-top: 100px;
 }
 
 .support-text {
